# Mantle-Manager

./: .gitignore  CHANGELOG.md  Cargo.toml  DECISIONS.md  README.md  cleanup.md  conflict.md  futures.md  justfile  rustfmt.toml
.cargo/: deny.toml
.github/workflows/: ci.yml
assets/: io.github.mantle_manager.MantleManager.appdata.xml  io.github.mantle_manager.MantleManager.desktop
crates/mantle_core/: Cargo.toml  build.rs
crates/mantle_core/src/: error.rs  lib.rs  secrets.rs  theme.rs
crates/mantle_core/src/archive/: bsa.rs  detect.rs  mod.rs  rar.rs  sevenz.rs  zip.rs
crates/mantle_core/src/config/: mod.rs
crates/mantle_core/src/conflict/: address_lib.rs  detector.rs  dll.rs  mod.rs  prune.rs  resolution.rs
crates/mantle_core/src/data/: downloads.rs  mod.rs  mod_files.rs  mods.rs  profiles.rs  schema.rs
crates/mantle_core/src/data/migrations/: m001_initial.sql  m002_add_downloads.sql
crates/mantle_core/src/diag/: cosave.rs  mod.rs  overwrite.rs
crates/mantle_core/src/game/: games.rs  ini.rs  mod.rs  proton.rs  registry.rs  steam.rs  version.rs
crates/mantle_core/src/install/: bsa.rs  case_fold.rs  mod.rs
crates/mantle_core/src/mod_list/: mod.rs
crates/mantle_core/src/plugin/: context.rs  event.rs  mod.rs  native.rs  registry.rs  sandbox.rs  scripted.rs
crates/mantle_core/src/profile/: mod.rs
crates/mantle_core/src/service/: mod.rs  mod_service.rs  profile.rs
crates/mantle_core/src/skse/: config.rs  download.rs  mod.rs  proton.rs  version.rs
crates/mantle_core/src/vfs/: cleanup.rs  detect.rs  mod.rs  mount.rs  namespace.rs  stacking.rs  types.rs
crates/mantle_core/src/vfs/backend/: fuse.rs  kernel.rs  mod.rs  symlink.rs
crates/mantle_core/tests/: archive_extraction.rs  conflict_detection.rs  data_migrations.rs  game_detection.rs  integration_core.rs  integration_state.rs  vfs_mount_lifecycle.rs  vfs_select_backend.rs  vfs_symlink_farm.rs
crates/mantle_net/: Cargo.toml
crates/mantle_net/src/: download.rs  error.rs  lib.rs
crates/mantle_net/src/nexus/: mod.rs  models.rs
crates/mantle_ui/: Cargo.toml
crates/mantle_ui/src/: install_dialog.rs  launch.rs  main.rs  settings.rs  sidebar.rs  skse.rs  state.rs  state_worker.rs  window.rs
crates/mantle_ui/src/downloads/: mod.rs  queue.rs
crates/mantle_ui/src/pages/: downloads.rs  mod.rs  mods.rs  nexus_search.rs  overview.rs  plugins.rs  profiles.rs  shared.rs
examples/plugins/: README.md
examples/plugins/rhai/mod_watcher/: manifest.toml  plugin.rhai
examples/plugins/rhai/profile_greeter/: manifest.toml  plugin.rhai
examples/plugins/rust/conflict_notifier/: Cargo.toml  manifest.toml
examples/plugins/rust/conflict_notifier/src/: lib.rs
examples/plugins/rust/session_logger/: Cargo.toml  manifest.toml
examples/plugins/rust/session_logger/src/: lib.rs
flatpak/: io.github.mantle_manager.MantleManager.yml
scripts/: pre-commit
standards/: ARCHITECTURE.md  BUILD_GUIDE.md  CODING_STANDARDS.md  DATA_MODEL.md  PLATFORM_COMPAT.md  PLUGIN_API.md  RULE_OF_LAW.md  TESTING_GUIDE.md  UI_GUIDE.md  VFS_DESIGN.md
