[workspace]
members = [
    "crates/mantle_core",
    "crates/mantle_net",
    "crates/mantle_ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
authors = ["Mantle Manager Contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/mantle-manager/mantle-manager"

[workspace.lints.clippy]
pedantic = "warn"
correctness = "deny"

[workspace.dependencies]
# Core async runtime
tokio = { version = "~1.36", features = ["full"] }
# Serialization
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
toml = "~0.8"
# Error handling
thiserror = "~1.0"
anyhow = "~1.0"
# Logging
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
# Data
rusqlite = "~0.31"
# Utilities
once_cell = "~1.19"
semver = { version = "~1.0", features = ["serde"] }
xxhash-rust = { version = "~0.8", features = ["xxh3"] }
rayon = "~1.8"
# Linux / system
libc = "~0.2"
nix = { version = "~0.28", features = ["mount", "process", "user"] }
notify = "~6.1"
# Steam / game
steamlocate = "~2.0"
esplugin = "~6.0"
ba2 = "~3.0"
# Plugin system
libloading = "~0.8"
rhai = { version = "~1.17", features = ["sync"] }
# UI
gtk4 = "~0.8"
libadwaita = { version = "~0.6", features = ["v1_4"] }
# Archive extraction (libarchive FFI)
compress-tools = "0.15.1"
# Optional — net feature (declare optional = true in each crate that gates it)
# rustls-tls avoids OpenSSL linkage issues in Flatpak; stream enables chunked downloads.
reqwest = { version = "~0.11", default-features = false, features = ["rustls-tls", "json", "stream"] }
# UUIDs for stable download job identity.
uuid = { version = "1", features = ["v4"] }
# Temporary files/directories used in tests.
tempfile = "3"
# Ordered hash map — used by GameIni to preserve INI section and key insertion order.
indexmap = "~2.0"
