[package]
name = "mantle_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
## Enables HTTP networking: version checks and downloads for the SKSE installer.
## Adds `reqwest` (TLS via rustls). Must be opted-in explicitly; Mantle Manager
## builds and runs fully without this feature.
net = ["dep:reqwest"]
## Stores nexus_api_key in the OS secret store (GNOME Keyring / KWallet via D-Bus).
## Default-on for normal builds; disable with --no-default-features for CI without D-Bus.
default = ["secrets"]
secrets = ["dep:keyring"]

[dependencies]
reqwest = { workspace = true, optional = true }
keyring = { optional = true, version = "3" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
once_cell.workspace = true
semver.workspace = true
xxhash-rust.workspace = true
rayon.workspace = true
libc.workspace = true
nix.workspace = true
notify.workspace = true
steamlocate.workspace = true
esplugin.workspace = true
ba2.workspace = true
libloading.workspace = true
rhai.workspace = true
rusqlite.workspace = true
compress-tools.workspace = true
indexmap.workspace = true
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
