[package]
name = "mantle_ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "mantle-manager"
path = "src/main.rs"

[features]
## Enables SKSE installer: version check + HTTP download via mantle_core's net feature.
net = ["mantle_core/net"]

[dependencies]
mantle_core = { path = "../mantle_core" }
gtk4.workspace = true
libadwaita.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
