[package]
name = "mantle_ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "mantle-manager"
path = "src/main.rs"

[features]
## Enables SKSE installer, Nexus API client, and HTTP mod downloads.
net = ["mantle_core/net", "dep:mantle_net"]

[dependencies]
mantle_core = { path = "../mantle_core" }
mantle_net = { path = "../mantle_net", optional = true }
gtk4.workspace = true
libadwaita.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
